// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`UIHierarchyItem > classes > active class name > should have "active" class name 1`] = `
[
  "hierarchy-item",
  "active",
  "file",
]
`;

exports[`UIHierarchyItem > classes > active class name > should not have "active" class name 1`] = `
[
  "hierarchy-item",
  "file",
]
`;

exports[`UIHierarchyItem > classes > file > should  not have "file" class name 1`] = `
[
  "hierarchy-item",
  "active",
]
`;

exports[`UIHierarchyItem > classes > file > should have "file" class name 1`] = `
[
  "hierarchy-item",
  "active",
  "file",
]
`;

exports[`UIHierarchyItem > classes > focused class name > should have "focused" class name 1`] = `
[
  "hierarchy-item",
  "focused",
  "active",
  "file",
]
`;

exports[`UIHierarchyItem > classes > focused class name > should note have "focused" class name 1`] = `
[
  "hierarchy-item",
  "active",
  "file",
]
`;

exports[`UIHierarchyItem > components > Arrow Icon > shoud not render arrow icon 1`] = `false`;

exports[`UIHierarchyItem > components > Arrow Icon > shoud render arrow icon 1`] = `true`;

exports[`UIHierarchyItem > components > Node Type Icon > should render "Node Type" icon 1`] = `true`;

exports[`UIHierarchyItem > components > should render "Delete" button 1`] = `true`;

exports[`UIHierarchyItem > events > should emit "delete" event 1`] = `
[
  [
    {
      "id": "1",
      "parentId": null,
      "type": 1,
    },
  ],
]
`;

exports[`UIHierarchyItem > events > should emit "select" event 1`] = `
[
  [
    {
      "id": "1",
      "parentId": null,
      "type": 1,
    },
  ],
]
`;
